--- a/frontend/src/components/AddMachine/AddMachine.css
+++ b/frontend/src/components/AddMachine/AddMachine.css
@@ -3,20 +3,30 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
-  
+
 .modal-content {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-  
+
+.form-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+input {
+    flex: 1;
+    padding: 8px;
+}
+
 .close {
     color: #aaa;
     float: right;
@@ -24,14 +34,14 @@
     font-weight: bold;
     cursor: pointer;
 }
-  
+
 .close:hover,
 .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
 }
-  
+
 .error {
     color: red;
 }
