--- a/frontend/src/components/WISSHMain/WISSHMain.css
+++ b/frontend/src/components/WISSHMain/WISSHMain.css
@@ -3,11 +3,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: black;
 }
 
 .file-container {
+    min-height: 10px;
     flex: 1;
     overflow-y: auto;
+    background-color: white;
 }
 
 .gap {
