--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
     flex-direction: column;
 }
 
-.machine-list-outlet {
+.machine-list {
     width: 100%;
     height: 100%;
     overflow-y: auto;
