--- a/frontend/src/components/MachineList/MachineList.css
+++ b/frontend/src/components/MachineList/MachineList.css
@@ -1,8 +1,9 @@
 .machine-list ul {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 0;
+    margin: 0px;
+    padding-left: 10px;
+    padding-top: 10px;
     list-style-type: none;
+    overflow-x: auto;
 }
 
 li + li {
